--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,10 @@
+/*@import 'variables'; */
+@import 'calendar.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import 'variables';
-@import 'calendar.css';
-
-
 [x-cloak] {
-    display: none;
+  display: none;
 }
